<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/record_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        style="@style/UserRecordTitleStyle"
        android:id="@+id/record_reputation"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:text="@string/main_reputation_title"/>

    <TextView
        style="@style/UserRecordTitleStyle"
        android:id="@+id/record_username"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:text="@string/main_user_name_title"/>

</LinearLayout>